@@ -30,3 +30,6 @@ nick = iusbot
 
 # Amount of times in seconds to send PINGs to the server (keep alive)
 ping_cycle = 60
+
+# The number of bytes to recv from the irc socket
+recv_bytes = 2048
